--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
     }
 
     .footer {
-      /* FIX 1: Padding vertikal dikurangi agar tombol lebih terlihat di mobile */
-      padding: 55px 0px; /* Padding vertikal 6px, horizontal 0 (diambil dari margin tombol) */
+      /* MODIFIKASI: Ketinggian footer dikurangi agar lebih proporsional */
+      padding: 50px 0px; /* Padding vertikal 10px, horizontal 0 */
       border-top: 0px solid #eef2f4;
       display: flex;
       justify-content: center; 
@@ -328,6 +328,7 @@
         box-shadow: 2px 2px 4px #c5c9cd, -2px -2px 4px #ffffff;
         transition: all 0.2s ease-out;
         user-select: none;
+        position: relative;
     }
     .nav-btn:active {
         box-shadow: inset 2px 2px 4px #c5c9cd, inset -2px -2px 4px #ffffff;
@@ -336,15 +337,19 @@
     .nav-btn:hover {
         background: #d1d5db;
     }
+    /* MODIFIKASI: Mengurangi font-size agar panah berada di tengah lingkaran */
     .nav-back::before {
         content: '«'; 
-        font-size: 30px;
+        font-size: 24px; /* DIUBAH DARI 30px */
         line-height: 1;
+        
     }
     .nav-next::before {
         content: '»'; 
-        font-size: 30px;
+        font-size: 24px; /* DIUBAH DARI 30px */
         line-height: 1;
+        position: absolute;
+        transform: translate(15px, 6px);
     }
     
     /* MODAL CSS */
@@ -452,8 +457,9 @@
           width: 36px;
           height: 36px;
       }
+      /* MODIFIKASI: Mengurangi font-size untuk mobile agar panah berada di tengah lingkaran */
       .nav-back::before, .nav-next::before {
-          font-size: 26px;
+          font-size: 22px; /* DIUBAH DARI 26px */
       }
     }
   </style>
@@ -904,7 +910,7 @@ ${analysis}`;
                 <tr>
                     <td>${a.no}</td>
                     <td style="text-align: justify;">${a.aspek}</td>
-                    <td style="text-align: left;">${isRefleksiSection ? 'Lihat kolom Catatan' : bukti}</td> 
+                    <td style="text-align: left;">${isRefleksiSection ? 'Reflesi' : bukti}</td> 
                     <td style="text-align: left;">${catatan}</td>
                 </tr>
             `;
@@ -990,7 +996,7 @@ ${analysis}`;
                             <th>No.</th>
                             <th style="text-align: justify;">Aspek yang diamati</th>
                             <th>Bukti Pembelajaran</th>
-                            <th>Catatan/Refleksi</th>
+                            <th>Catatan</th>
                         </tr>
                     </thead>
                     <tbody>
