--- a/index.html
+++ b/index.html
@@ -115,27 +115,43 @@
     }
 
     .footer {
-      /* MODIFIKASI: Ketinggian footer dikurangi agar lebih proporsional */
-      padding: 50px 0px; /* Padding vertikal 10px, horizontal 0 */
-      border-top: 0px solid #eef2f4;
-      display: flex;
-      justify-content: center; 
-      align-items: center;
-      background: white;
-      z-index: 100;
-      border-radius: 0 0 14px 14px;
-      flex-shrink: 0; 
-    }
+  /* --- START: MODIFIKASI UNTUK FIXED FOOTER & PROPORSIIONAL --- */
+  position: fixed; /* Menetapkan posisi tetap (fixed) */
+  bottom: 0;      /* Mengunci di bagian bawah layar */
+  left: 50%;      /* Posisi horizontal di tengah, akan disesuaikan dengan transform */
+  transform: translateX(-50%); /* Menggeser ke kiri 50% dari lebar sendiri */
+  width: 100%;    /* Lebar penuh */
+  max-width: 820px; /* Ikuti max-width .card agar tetap di dalam batasan aplikasi */
+  
+  /* Padding Vertikal Disesuaikan agar lebih proporsional */
+  padding: 10px 0; /* Mengurangi padding vertikal agar lebih ringkas */
+  height: auto;    /* Tinggi otomatis mengikuti konten */
+  
+  border-top: 1px solid #eef2f4; /* Tambahkan garis pemisah yang lebih jelas */
+  display: flex;
+  justify-content: center; 
+  align-items: center;
+  background: white;
+  z-index: 1000; /* Pastikan di atas elemen lain */
+  border-radius: 0 0 14px 14px; /* Pertahankan sudut melengkung */
+  flex-shrink: 0; 
+  /* --- END: MODIFIKASI UNTUK FIXED FOOTER & PROPORSIIONAL --- */
+}
 
     .content {
-      flex: 1 1 auto; 
-      display: flex;
-      flex-direction: column; 
-      align-items: center;
-      padding: 0;
-      overflow-y: auto; 
-      position: relative; 
-    }
+  flex: 1 1 auto; 
+  display: flex;
+  flex-direction: column; 
+  align-items: center;
+  padding: 0;
+  overflow-y: auto; 
+  position: relative;
+  
+  /* --- START: MODIFIKASI PADDING UNTUK MENGHINDARI FOOTER FIXED --- */
+  /* Padding-bottom sekitar 70px-80px biasanya cukup untuk footer */
+  padding-bottom: 75px; 
+  /* --- END: MODIFIKASI PADDING UNTUK MENGHINDARI FOOTER FIXED --- */
+}
     
     .container-soft {
       background: rgba(209,250,229,0.4);
